# Mitchell-Schaeffer-finitewave-model

./: README.md  pyproject.toml
examples/: mitchell_schaeffer_example.py
implementation/: mitchell_schaeffer_0d.py
mitchell_schaeffer/: ops.py
tests/: mitchell_schaeffer_test.py
