[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "mitchell-schaeffer-finitewave-model"
version = "0.1.0"
description = "Mitchell-Schaeffer model."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["cardiac", "electrophysiology", "finitewave", "model"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Medical Science Apps."
]

dependencies = []

[project.entry-points."finitewave.models"]
mitchell_schaeffer = "mitchell_schaeffer.ops"

[tool.hatch.build.targets.wheel]
packages = ["mitchell_schaeffer"]

[tool.hatch.metadata]
allow-direct-references = true